Updated images directory

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
                 <div id="activities-content">
                     <div>
                         <p>V&A Waterfront</p>
-                        <img class="activities-img" src="images/waterfront.jpg">
+                        <img class="activities-img" src="waterfront.jpg">
                     </div>
                     <div>
                         <p>Table Mountain</p>
-                        <img class="activities-img" src="images/table-mountain.jpg">
+                        <img class="activities-img" src="table-mountain.jpg">
                     </div>
                     <div>
                         <p>Cape Point</p>
-                        <img class="activities-img" src="images/cape-point.jpg">
+                        <img class="activities-img" src="cape-point.jpg">
                     </div>
                 </div>
             </div>
 
             <!-- GUIDE SECTION -->
             <div id="guide">
-                <img id="guide-avatar" src="images/myface.png">
+                <img id="guide-avatar" src="myface.png">
                 <div>
                     <h3>Your guide</h3>
                     <p>"I have lived and been a tourist in Cape Town. Having spent the greater part of my life exploring the city, I can guide you from the secret gin bar to the most visible table-mountain peaks!"</p>
